@@ -1,3 +1,8 @@
+2007-02-21  Rodney Dawes  <dobey@novell.com>
+
+	* scripts/yelp.py: Document how the script works, to aid people in
+	writing new scripts
+
 2006-12-07  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 2.15.2 for release
